# AppFlowy

frontend/appflowy_flutter/: pubspec.yaml
frontend/rust-lib/: Cargo.toml
